@@ -5,6 +5,9 @@ import software.sava.rpc.json.http.response.IxError;
 import software.sava.rpc.json.http.response.JsonRpcException;
 import software.sava.rpc.json.http.response.RpcCustomError;
 import software.sava.rpc.json.http.response.TransactionError;
+import software.sava.rpc.json.http.response.RpcCustomError.SendTransactionPreflightFailure;
+import software.sava.rpc.json.http.response.TransactionError.InstructionError;
+import software.sava.rpc.json.http.response.IxError.Custom;
 import systems.comodal.jsoniter.JsonIterator;
 
 import java.util.OptionalLong;
@@ -59,29 +62,34 @@ final class ParseCustomRpcErrorTests {
     assertTrue(exception.retryAfterSeconds().isEmpty());
 
     final var customError = exception.customError();
-    if (customError instanceof RpcCustomError.SendTransactionPreflightFailure(final var simulation)) {
-      assertNull(simulation.context());
-      assertNull(simulation.replacementBlockHash());
+    if (customError instanceof SendTransactionPreflightFailure) {
+      final var simulation = (SendTransactionPreflightFailure) customError;
+      
+      assertNull(simulation.simulation().context());
+      assertNull(simulation.simulation().replacementBlockHash());
+      assertTrue(simulation.simulation().accounts().isEmpty());
 
-      assertTrue(simulation.accounts().isEmpty());
-
-      final var unitsConsumed = simulation.unitsConsumed();
+      final var unitsConsumed = simulation.simulation().unitsConsumed();
       assertTrue(unitsConsumed.isPresent());
       assertEquals(10428, unitsConsumed.getAsInt());
 
-      final var logs = simulation.logs();
+      final var logs = simulation.simulation().logs();
       assertEquals(7, logs.size());
-      assertEquals("Program GovaE4iu227srtG2s3tZzB4RmWBzw8sTwrCLZz7kN7rY invoke [1]", logs.getFirst());
+      assertEquals("Program GovaE4iu227srtG2s3tZzB4RmWBzw8sTwrCLZz7kN7rY invoke [1]", logs.get(0));
       assertEquals("Allocate: account Address { address: asdf, base: None } already in use", logs.get(3));
-      assertEquals("Program GovaE4iu227srtG2s3tZzB4RmWBzw8sTwrCLZz7kN7rY failed: custom program error: 0x0", logs.getLast());
+      assertEquals("Program GovaE4iu227srtG2s3tZzB4RmWBzw8sTwrCLZz7kN7rY failed: custom program error: 0x0", logs.get(6));
 
-      final var error = simulation.error();
+      final var error = simulation.simulation().error();
       assertNotNull(error);
 
-      if (error instanceof TransactionError.InstructionError(int index, var ixError)) {
-        assertEquals(0, index);
-        if (ixError instanceof IxError.Custom(long code)) {
-          assertEquals(0, code);
+      if (error instanceof InstructionError) {
+        final var ixErr = (InstructionError) error;
+        assertEquals(0, ixErr.ixIndex());
+        
+        final var ixError = ixErr.ixError();
+        if (ixError instanceof Custom) {
+          final var customIxError = (Custom) ixError;
+          assertEquals(0, customIxError.error());
         } else {
           fail(error.getClass().getSimpleName());
         }
